<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_color" >    
	   
    <FrameLayout 
        android:layout_weight="0.1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
		<com.google.android.gms.common.SignInButton
		    android:id="@+id/sign_in_button"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
	    	android:layout_gravity="right"/>
	    	
	    <TableLayout
			android:id="@+id/sign_out_layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
    		android:stretchColumns="1"  
			android:visibility="gone">
	    	
	        <TableRow>
	            <TextView/>
			    <TextView
			        android:id="@+id/current_user"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
		    		android:layout_gravity="right"
			        android:textColor="@color/sign_out_back" />
		    </TableRow>
				    
	        <TableRow>
				<Button
				    android:id="@+id/leaderboard_button"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
				    android:text="@string/leaderboard"
		    		android:layout_gravity="left" 
			        style="@style/SignOutButton" />
			    
				<Button
				    android:id="@+id/sign_out_button"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
				    android:text="@string/sign_out"
		    		android:layout_gravity="right" 
		    		style="@style/SignOutButton"  />
			</TableRow>
		</TableLayout>
	</FrameLayout>
    
    <TextView
        android:id="@+id/currentScoreText"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/current_score"
        android:textColor="@color/button_border"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1" 
    	android:gravity="center" />
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" >
        
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr0c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr0c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr0c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr0c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr0c4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr1c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr1c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr1c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr1c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr1c4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr2c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr2c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr2c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr2c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr2c4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr3c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr3c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr3c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr3c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr3c4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr4c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr4c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr4c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr4c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr4c4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr5c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr5c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr5c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr5c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr5c4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
	    	android:layout_height="match_parent"
        	android:layout_weight="1" 
        	android:stretchColumns="*">
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr6c0"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr6c1"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr6c2"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr6c3"/>
        	<FrameLayout android:layout_weight="1" android:id="@+id/widgetr6c4"/>
        </TableRow>
            
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        
        <Button
	        android:id="@+id/howToButton"
	        android:text="@string/how_to"
    		style="@style/HowToButton" />
        
        <TextView
	        android:id="@+id/highScoreText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/high_score"
	        android:textColor="@color/button_border"
	        android:textAppearance="?android:attr/textAppearanceMedium"  
        	android:layout_weight="1"
    		android:gravity="center" />
        
        <Button
	        android:id="@+id/newGameButton"
	        android:text="@string/new_game"
    		style="@style/NewGameButton" />

    </LinearLayout>

</LinearLayout>